refactor(Services): restructure service layer in accordance with new requirements